# notiziecina

./: .env.example  .gitignore  README.md  Start Italy Chinese News Monitor.command  Sync to GitHub and Streamlit.command  app.py  pyproject.toml  requirements.txt
news_monitor/: __init__.py  config.py  database.py  env_loader.py  fetcher.py  scoring.py  service.py  text_utils.py  translator.py  ui.py
